erDiagram
  TENANTS ||--o{ VENDOR_SETTLEMENT_BATCHES : batches
  TENANTS ||--o{ VENDOR_SETTLEMENTS : settles
  VENDORS ||--o{ VENDOR_SETTLEMENTS : payable_to
  VENDOR_SETTLEMENTS ||--o{ VENDOR_SETTLEMENT_ITEMS : has_items
  VENDOR_SETTLEMENT_ITEMS ||--o{ VENDOR_SETTLEMENT_ADJUSTMENTS : adjustments
  VENDOR_SETTLEMENT_ITEMS ||--o{ VENDOR_DISPUTES : disputes


